objects/SharePoint_PROD_HeronQuotes__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>OAuth for Heron PROD site phi_UWquotes</description>
    <fields>
        <fullName>Access_Token_1__c</fullName>
        <label>Access Token 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Token_2__c</fullName>
        <label>Access Token 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Token_3__c</fullName>
        <label>Access Token 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Token_Expiration__c</fullName>
        <label>Access_Token_Expiration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <description>SharePoint App Client ID</description>
        <label>Client ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <description>SharePoint App client secret</description>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_URI__c</fullName>
        <description>Auth Provider redirect</description>
        <label>Redirect URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Token_1__c</fullName>
        <label>Refresh Token 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Token_2__c</fullName>
        <label>Refresh Token 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SharePoint PROD HeronQuotes</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Access_Token_Expiration__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Refresh_Token_1__c</columns>
        <columns>Refresh_Token_2__c</columns>
        <columns>Access_Token_1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>